k8s/deployment-db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-application-db
  namespace: demo-kube
spec:
  replicas: 1
  selector:
    matchLabels:
      name: go-web-db
  template:
    metadata:
      labels:
        name: go-web-db
    spec:
      containers:
        - name: db
          image: mysql:latest
          imagePullPolicy: IfNotPresent
          #          resources:
          #            requests:
          #              ephemeral-storage: "2Gi"
          #            limits:
          #              ephemeral-storage: "4Gi"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-config-volume
              mountPath: /etc/mysql/conf.d/default_auth.cnf
              subPath: default_auth
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-config-volume
          configMap:
            name: mysql-config
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
