k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-application
  namespace: demo-kube
spec:
  replicas: 1
  selector:
    matchLabels:
      name: go-web-app
  template:
    metadata:
      labels:
        name: go-web-app
    spec:
      containers:
        - name: application
          image: khangle812/demo-kuber
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
