k8s/service-db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: go-web-db
  namespace: demo-kube
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    name: go-web-db
