k8s/service-web.yml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-web
  namespace: demo-kube
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
  selector:
    name: demo-web
