k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: go-service-ingress
  namespace: demo-kube
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: khang.test
      http:
        paths:
        - backend:
            serviceName: go-web-service
            servicePort: 3000
#          path: /
    # This section is only required if TLS is to be enabled for the Ingress
#  tls:
#    - hosts:
#        - khang.test
#      secretName: example-tls
